Make loading bar bigger Fix media clipping through the screen

--- a/guilded/base.sass
+++ b/guilded/base.sass
@@ -21,11 +21,15 @@ $nihility-fg-1: #696969
 $nihility-fg-2: #AAAAAA
 $nihility-fg-3: #DDDDDD
 $nihility-mark: #AAAAAA
+// Spacing
+$nihility-spacing-0: 0.5rem
+$nihility-spacing-1: 1rem
+$nihility-spacing-2: 2rem
+$nihility-spacing-3: 4rem
 // Misc colours
 $nihility-theme: #595959
 $nihility-theme-2: #676767
 $nihility-theme-3: #848484
-$nihility-floating-opacity: 95%
 $nihility-bar: #060606
 // Noticable colours
 $nihility-mention: #C22
@@ -37,6 +41,8 @@ $nihility-bad: #A44
 $nihility-bad-2: #F66
 $nihility-good: #5A4
 // Misc
+$nihility-floating-opacity: 0.95
+$nihility-mild-opacity: 0.55
 $nihility-transition: 0.2s
 $nihility-animation: 2s
 $nihility-roundness-small: 0.5rem
