--- a/guilded/floating.sass
+++ b/guilded/floating.sass
@@ -149,9 +149,6 @@
  * --- Menu ---
  */
 
-// Whole menu container
-.TransientMenuPortalContext-portal-container
-    opacity: $nihility-floating-opacity
 // Menu container
 .TransientMenu-container-style-default
     background-color: $nihility-bg-1
